
5/13/08:  changed UI to not show "admin login" unless already admin, moved to top nav not side
5/13/08:  Migrate Ability, implement archive migrate for v1.16
5/13/08:  don't show "tags" on display pages if empty
5/13/08:  Archive support:  Keeps archive list of # posts per month, and ability to filter by them, show in sidebar