@@ -51,6 +51,11 @@
             </ul>
         </div>
     </div>
+    <br />
+    <h3>Potlatch Blog</h3>
+    
+        Blog Version={{ blog.blogversion }}
+    
 </div>
 <!-- Right Sidebar Ends -->
 {% endblock %}
